# o

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html
box/containers/filesystem-cleaner/: CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  example-pod.yaml
box/containers/filesystem-cleaner/src/: cleaner.rs  config.rs  main.rs  scanner.rs
box/kubernetes/aurora-database-insights-exporter/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  iam-policy.json
box/kubernetes/aurora-database-insights-exporter/charts/aurora-database-insights-exporter/: Chart.yaml  README.md  values.yaml
box/kubernetes/aurora-database-insights-exporter/docs/: comparison.md  configuration.md  helm.md  limitation.md  metrics.md
box/kubernetes/aurora-database-insights-exporter/src/: aws.rs  config.rs  error.rs  main.rs  types.rs
box/kubernetes/aurora-database-insights-exporter/src/aws/: collector.rs  discovery.rs
box/kubernetes/aurora-database-insights-exporter/src/k8s/: leader.rs
box/kubernetes/aurora-database-insights-exporter/src/observability/: metrics.rs  server.rs
box/kubernetes/aws-health-event-notifier/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
box/kubernetes/aws-health-event-notifier/docs/: metrics.md
box/kubernetes/aws-health-event-notifier/src/: config.rs  dedup.rs  error.rs  filter.rs  health.rs  interactive.rs  main.rs  notify.rs  poller.rs  server.rs  slack.rs
box/kubernetes/aws-health-event-notifier/src/aws/: account.rs  health.rs
box/kubernetes/copyfail-guard/: .dockerignore  .gitignore  1.drawio  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
box/kubernetes/copyfail-guard/src/: abi.rs  ebpf.rs  events.rs  health.rs  loader.rs  main.rs  metrics.rs
box/kubernetes/ec2-statuscheck-rebooter/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
box/kubernetes/ec2-statuscheck-rebooter/docs/: architecture.md  installation.md  troubleshooting.md
box/kubernetes/ec2-statuscheck-rebooter/src/: config.rs  ec2.rs  health.rs  lib.rs  logging.rs  main.rs  rebooter.rs
box/kubernetes/elasticache-backup/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
box/kubernetes/elasticache-backup/docs/: iam-policy.json
box/kubernetes/elasticache-backup/src/: backup.rs  cli.rs  error.rs  export.rs  main.rs  retention.rs  snapshot.rs  types.rs
box/kubernetes/gss/: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs
box/kubernetes/gss/src/: config.rs  connectivity.rs  logger.rs  main.rs  models.rs  publisher.rs  reporter.rs  scanner.rs
box/kubernetes/karc/: Cargo.toml  Makefile  README.md
box/kubernetes/karc/src/: config.rs  error.rs  k8s.rs  main.rs  output.rs
box/kubernetes/kubernetes-upgrade-operator/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs
box/kubernetes/kubernetes-upgrade-operator/docs/: installation.md  metrics.md
box/kubernetes/kubernetes-upgrade-operator/src/: aws.rs  controller.rs  crd.rs  eks.rs  error.rs  health.rs  k8s.rs  main.rs  metrics.rs  notify.rs  phases.rs  slack.rs  status.rs  telemetry.rs
box/kubernetes/kup/: Cargo.toml  Makefile  README.md  build.rs
box/kubernetes/kup/src/: config.rs  eks.rs  error.rs  k8s.rs  main.rs  output.rs
box/kubernetes/podver/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
box/kubernetes/podver/src/: config.rs  main.rs  scanner.rs  types.rs
box/kubernetes/promdrop/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
box/kubernetes/promdrop/docs/: branching-strategy.md  cicd-improvements.md  docker-build.md  installation.md  output-configuration.md  release-workflow.md  testing.md  usage.md
box/kubernetes/promdrop/src/: grouper.rs  lib.rs  main.rs  models.rs  output.rs  parser.rs
box/kubernetes/promdrop/tests/: e2e_conversion_test.rs  integration_test.rs
box/kubernetes/redis-console/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
box/kubernetes/redis-console/examples/: config.yaml  config.yaml.test
box/kubernetes/redis-console/src/: command.rs  config.rs  main.rs  ops.rs  redis_client.rs  tty.rs
box/kubernetes/snowflake-exporter/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
box/kubernetes/snowflake-exporter/docs/: installation.md  metrics.md
box/kubernetes/snowflake-exporter/src/: config.rs  error.rs  main.rs  snowflake.rs
box/kubernetes/trivy-collector/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
box/kubernetes/trivy-collector/docs/: architecture.md  authentication.md  configuration.md  development.md  frontend-routing.md  helm-chart.md  metrics.md  rbac.md  troubleshooting.md
box/kubernetes/trivy-collector/frontend/: index.html  package-lock.json  package.json  vite.config.ts
box/kubernetes/trivy-collector/src/: alerts.rs  auth.rs  collector.rs  config.rs  health.rs  hub.rs  lib.rs  logging.rs  main.rs  metrics.rs  server.rs  storage.rs  web.rs
box/kubernetes/trivy-collector/static/: app.js  index.html  style.css
box/tools/ami-cleanup/: Cargo.toml  Makefile  README.md
box/tools/ami-cleanup/src/: ami.rs  app.rs  aws.rs  cleanup.rs  cli.rs  error.rs  main.rs  ui.rs
box/tools/ij/: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
box/tools/ij/docs/: configuration.md
box/tools/ij/src/: ami_cleanup.rs  asg_scaling.rs  aws_mfa.rs  config.rs  ec2.rs  error.rs  file_config.rs  forward.rs  main.rs  session.rs  ssm_connect.rs  tabs.rs  ui.rs  wizard.rs
box/tools/kk/: .gitignore  Cargo.toml  Makefile  README.md
box/tools/kk/configs/: domain-example.yaml
box/tools/kk/src/: checker.rs  config.rs  main.rs
box/tools/qg/: .gitignore  Cargo.toml  Makefile  README.md
box/tools/qg/src/: main.rs
box/tools/s3vget/: .gitignore  Cargo.toml  Makefile  README.md
box/tools/s3vget/src/: main.rs
box/tools/vlt/: .gitignore  Cargo.toml  Makefile  README.md
box/tools/vlt/src/: app.rs  crypto.rs  error.rs  input.rs  main.rs  session.rs  ui.rs  vault.rs
(+1399 files in other folders)
