[package]
name = "copyfail-guard"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
authors = ["younsl"]
license = "MIT"
repository = "https://github.com/younsl/o"
description = "Kubernetes DaemonSet that blocks AF_ALG socket creation to mitigate CVE-2026-31431 (Copy.Fail)"

[features]
default = []
build-ebpf = []

[[bin]]
name = "copyfail-guard"
path = "src/main.rs"

[[bin]]
name = "copyfail-guard-ebpf"
path = "src/ebpf.rs"
required-features = ["build-ebpf"]
test = false
doctest = false
bench = false

[target.'cfg(target_arch = "bpf")'.dependencies]
aya-ebpf = "0.1.1"
aya-log-ebpf = "0.1"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
aya = "0.13"
aya-log = "0.2"

clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.49", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

anyhow = "1.0"
thiserror = "2.0"

bytes = "1.10"
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
prometheus = "0.13"

libc = "0.2"

[build-dependencies]
chrono = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1

# size opt ("z") generates control flow that the BPF verifier rejects.
[profile.ebpf]
inherits = "release"
opt-level = 3
debug-assertions = false
overflow-checks = false
