[package]
name = "elasticache-backup"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["younsl <your.email@example.com>"]
description = "ElastiCache snapshot backup to S3 automation"
license = "MIT"

[[bin]]
name = "elasticache-backup"
path = "src/main.rs"

[dependencies]
# AWS SDK
aws-config = "1.8"
aws-sdk-elasticache = "1.98"
aws-sdk-s3 = "1.121"
aws-smithy-types = "1.3"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# CLI and config
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time handling
chrono = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
