[package]
name = "ghes-schedule-scanner"
version = "0.6.1"
edition = "2024"
rust-version = "1.90"
authors = ["Younsung Lee <cysl@kakao.com>"]
description = "Kubernetes add-on for monitoring and analyzing CI/CD scheduled workflows in GitHub Enterprise Server"
license = "Apache-2.0"
repository = "https://github.com/younsl/o"
homepage = "https://github.com/younsl/o/tree/main/box/kubernetes/gss"
readme = "README.md"
keywords = ["github", "kubernetes", "scanner", "workflow", "cronjob"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/*",
    ".pre-commit-config.yaml",
    "docs/*",
    "charts/*",
]

[[bin]]
name = "ghes-schedule-scanner"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# GitHub API
octocrab = "0.40"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
url = "2"
base64 = "0.22"

# Slack API
slack-morphism = { version = "2", features = ["hyper"] }

[build-dependencies]
chrono = "0.4"
rustc_version = "0.4"

[dev-dependencies]
mockito = "1"
wiremock = "0.6"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
