[package]
name = "karc"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Younsung Lee <cysl@kakao.com>"]
license = "MIT"
description = "Karpenter NodePool consolidation manager CLI tool"
repository = "https://github.com/younsl/o"
readme = "README.md"

[dependencies]
# CLI and interaction
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.12"

# Terminal UI
colored = "3.1"
tabled = { version = "0.20", features = ["ansi"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Kubernetes
kube = { version = "0.98", features = ["client", "rustls-tls", "aws-lc-rs"], default-features = false }
k8s-openapi = { version = "0.24", features = ["v1_31"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date handling
chrono = "0.4"
chrono-tz = "0.10"
iana-time-zone = "0.1"

# Build info
const_format = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
