[package]
name = "kuo"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Younsung Lee <cysl@kakao.com>"]
license = "MIT"
description = "Kubernetes Upgrade Operator for EKS clusters"
repository = "https://github.com/younsl/o"
readme = "README.md"

[dependencies]
# AWS SDK
aws-config = "1.8"
aws-sdk-eks = "1.119"
aws-sdk-autoscaling = "1.97"
aws-sdk-sts = "1.56"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Kubernetes
kube = { version = "0.98", features = ["runtime", "derive", "client", "rustls-tls", "aws-lc-rs"], default-features = false }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
schemars = { version = "0.8", features = ["chrono"] }

# HTTP server (health endpoints)
axum = { version = "0.8", features = ["tokio"] }

# Metrics
prometheus-client = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Date handling
chrono = { version = "0.4", features = ["serde"] }

# Secrets
secrecy = "0.10"

# Build info
const_format = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
