[package]
name = "kup"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Younsung Lee <cysl@kakao.com>"]
license = "MIT"
description = "EKS cluster upgrade support CLI tool"
repository = "https://github.com/younsl/o"
readme = "README.md"

[dependencies]
# AWS SDK
aws-config = "1.8"
aws-sdk-eks = "1.119"
aws-sdk-autoscaling = "1.97"

# CLI and interaction
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.12"

# Terminal UI
colored = "3.1"
tabled = "0.20"
indicatif = "0.18"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Build info
const_format = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
