[package]
name = "podver"
version = "0.1.0"
edition = "2021"
authors = ["younsl"]
rust-version = "1.91"

[[bin]]
name = "podver"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
regex = "1.11"
indicatif = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
