[package]
name = "promdrop"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["younsl"]
description = "Generates Prometheus relabel configs to drop unused metrics"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
regex = "1.10"
prettytable-rs = "0.10"
dialoguer = "0.12"

[lib]
name = "promdrop"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.24"

[[bin]]
name = "promdrop"
path = "src/main.rs"
