[package]
name = "trivy-collector"
version = "1.4.0"
edition = "2024"
rust-version = "1.92"
authors = ["younsl"]
description = "Multi-cluster Trivy report collector and viewer"
license = "MIT"
repository = "https://github.com/younsl/o"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net"] }

# Kubernetes (collector mode)
kube = { version = "0.98", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }

# HTTP client (collector mode)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Web framework (server mode)
axum = { version = "0.8", features = ["tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono"] }

# Database (server mode)
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP server utilities
hyper = { version = "1.8", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Utilities
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = "8.5"
mime_guess = "2.0"
schemars = "0.8"
hostname = "0.4"

[build-dependencies]
vergen-gix = { version = "9", features = ["build", "cargo", "rustc"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"
