[package]
name = "ami-cleanup"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "TUI tool to find and remove unused AMIs and associated EBS snapshots"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"
aws-sdk-sts = "1"
aws-sdk-autoscaling = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
chrono = "0.4"
futures = "0.3"
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6"
const_format = "0.2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
aws-sdk-ec2 = { version = "1", features = ["test-util"] }
aws-sdk-autoscaling = { version = "1", features = ["test-util"] }
aws-smithy-http-client = { version = "1", features = ["test-util"] }
aws-smithy-types = "1"
http = "1"

[profile.release]
lto = true
strip = true
