[package]
name = "ij"
version = "0.4.0"
edition = "2024"
rust-version = "1.95.0"
authors = ["Younsung Lee <cysl@kakao.com>"]
license = "MIT"
description = "EC2 operations CLI for SSM connect and AMI cleanup"
repository = "https://github.com/younsl/o"
readme = "README.md"

[dependencies]
# AWS SDK
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.87"
aws-sdk-sts = "1"
aws-sdk-autoscaling = "1"
aws-types = "1.3"

# CLI and interaction
clap = { version = "4.5", features = ["derive", "env"] }
ratatui = "0.29"
nucleo = "0.5"
crossterm = { version = "0.28", features = ["event-stream"] }
dialoguer = "0.11"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "6.0"

# Terminal UI
colored = "3.1"
tabled = "0.20"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2"

# Time
chrono = "0.4"

# Unix process control (for proper Ctrl+C handling in SSM sessions)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "poll", "signal", "term"] }
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Build info
const_format = "0.2"

[dev-dependencies]
tempfile = "3.25"
serial_test = "3"
aws-sdk-ec2 = { version = "1.87", features = ["test-util"] }
aws-sdk-autoscaling = { version = "1", features = ["test-util"] }
aws-smithy-http-client = { version = "1", features = ["test-util"] }
aws-smithy-types = "1"
http = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
