[package]
name = "s3vget"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["younsl"]
description = "Download all versions of S3 objects with interactive prompts"
license = "MIT"

[dependencies]
aws-config = "1.8"
aws-sdk-s3 = "1.86"
tokio = { version = "1.45", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
chrono-tz = "0.10"
anyhow = "1.0"
dialoguer = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[bin]]
name = "s3vget"
path = "src/main.rs"
